--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -16,6 +16,13 @@ pipeline {
 	stages {
 		stage('Build') {
 			steps {
+				withCredentials([usernamePassword(credentialsId: 'oss-index-token', passwordVariable: 'NANCY_TOKEN', usernameVariable: 'NANCY_USER')]) {
+					sh './scripts/ci/test.sh'
+				}
+			}
+		}
+		stage('Test') {
+			steps {
 				sh './scripts/ci/build.sh'
 			}
 		}
