Added ability to write a default config and don't error out for config problems, log them and continue to use a default configuration

--- a/config.json.example
+++ b/config.json.example
@@ -8,6 +8,10 @@
 	"default_upstream": "1.1.1.1",
 	"upstreams": [
 		{
+			"regex": "local",
+			"nxdomain": true
+		},
+		{
 			"regex": ".*\\.example.com",
 			"upstream": "8.8.8.8"
 		},
