--- a/config.json.example
+++ b/config.json.example
@@ -1,27 +1,30 @@
 {
-	"host": "127.0.0.1",
-	"port": 5353,
 	"log": {
 		"level": "info",
 		"format": "json"
-	}
-	"default_upstream": "1.1.1.1",
-	"upstreams": [
+	},
+	"servers": [
 		{
-			"regex": "local",
-			"nxdomain": true
-		},
-		{
-			"regex": ".*\\.example.com",
-			"upstream": "8.8.8.8"
-		},
-		{
-			"regex": ".*\\.localdomain",
-			"upstream": "10.0.0.1"
-		},
-		{
-			"regex": ".*\\.(office\\.lan|myoffice\\.com)",
-			"upstream": "10.0.0.1"
+			"host": "127.0.0.1",
+			"port": 53,
+			"default_upstream": "1.1.1.1",
+			"upstreams": [
+				{
+					"regex": "local",
+					"nxdomain": true
+				},
+				{
+					"regex": ".*\\.example.com",
+					"upstream": "8.8.8.8"
+				},
+				{
+					"regex": ".*\\.localdomain",
+					"upstream": "10.0.0.1"
+				},
+				{
+					"regex": ".*\\.(office\\.lan|myoffice\\.com)",
+					"upstream": "10.0.0.1"
+				}
 		}
 	]
 }
